<resources>
    <string name="app_name">Quik E Rent</string>
    <string name="addPowerTool">Add</string>
    <string name="suggestPowerTool">Suggest new</string>
    <string name="checkSuggestPowerTool">Check suggests</string>
    <string name="removePowerTool">Remove/Destroy</string>
    <string name="rentPowerTool">Rent</string>
    <string name="rentedPowerTools">Rented</string>
    <string name="returnPowerTool">Return</string>
    <string name="confirmRenting">Confirm renting</string>
    <string name="returnPowerToolShort">Return</string>
    <string name="about">About</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="auth_not_verified">Authentication failed, verify your email!</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="addPowerToolPowerToolName">Add powerTool</string>
    <string name="suggestPowerToolPowerToolName">Suggest powerTool</string>
    <string name="addPowerToolPowerToolNameHint">Enter powerToolName…</string>
    <string name="addPowerToolBrandHint">Enter brand…</string>
    <string name="addPowerToolYearHint">Enter year…</string>
    <string name="addPowerToolSubmitText">Submit</string>
    <string name="suggestPowerToolSubmitText">Suggest</string>
    <string name="listOfPowerTools">List of powerTools</string>
    <string name="ListOfPowerToolsPowerToolNameFilterHint">Filter by contains in powerToolName field…</string>
    <string name="ListOfPowerToolsBrandFilterHint">Filter by contains in brand field…</string>
    <string name="ListOfPowerToolsYearFilterHint">Filter by contains in year field…</string>
    <string name="RemovePowerToolPowerToolNameFilterHint">Filter by contains in powerToolName field…</string>
    <string name="RemovePowerToolBrandFilterHint">Filter by contains in brand field…</string>
    <string name="RemovePowerToolYearFilterHint">Filter by contains in year field…</string>
    <string name="removePowerToolSubmitText">X</string>
    <string name="RentPowerToolPowerToolNameFilterHint">Filter by contains in powerToolName field…</string>
    <string name="RentPowerToolBrandFilterHint">Filter by contains in brand field…</string>
    <string name="RentPowerToolYearFilterHint">Filter by contains in year field…</string>
    <string name="AdminReturnPowerToolFilterHint">Filter by email</string>
    <string name="RentPowerToolSubmit">Rent</string>
    <string name="ConfirmRentPowerToolSubmit">Confirm</string>
    <string name="ReservePowerToolSubmit">Reserve</string>
    <string name="ReservePowerToolCancel">Cancel</string>
    <string name="checkStatePowerTool">Check state powerTool</string>
    <string name="emptytxt">emptytxt</string>
    <string name="todo">TODO</string>
</resources>
