<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    android:orientation="vertical">

        <TextView
            android:id="@+id/SuggestPowerToolPowerToolNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suggestPowerToolPowerToolName"
            android:textSize="10pt">
        </TextView>

        <EditText
            android:id="@+id/SuggestPowerToolBrandEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/addPowerToolBrandHint"
            android:inputType="text">
        </EditText>

        <EditText
            android:id="@+id/SuggestPowerToolPowerToolNameEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/addPowerToolPowerToolNameHint"
            android:inputType="text">
        </EditText>

        <EditText
            android:id="@+id/SuggestPowerToolYearEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/addPowerToolYearHint"
            android:inputType="numberDecimal">
        </EditText>

        <Button
            android:id="@+id/SuggestPowerToolSubmit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="requestListener"
            android:text="@string/suggestPowerToolSubmitText">
        </Button>

</LinearLayout>