<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.common.MainActivity">

    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:visibility="invisible"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <Button
                android:id="@+id/listOfPowerToolsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/listOfPowerTools"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/addPowerToolButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/addPowerTool"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/removePowerToolButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/removePowerTool"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/checkStatePowerToolButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/checkStatePowerTool"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/rentPowerToolButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/rentPowerTool"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/returnPowerToolButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/returnPowerTool"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/suggestPowerToolButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/suggestPowerTool"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/adminReturnPowerToolButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/returnPowerTool"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/adminConfirmRentPowerToolButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/confirmRenting"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/adminRentPowerToolButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/rentedPowerTools"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/checkSuggestPowerToolButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/checkSuggestPowerTool"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/aboutButton"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/about"
                android:textColor="@android:color/white"
                android:textStyle="bold" />


            <Button
                android:id="@+id/sign_out"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/btn_sign_out"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>