<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/RemovePowerToolBrandEditText"
        android:layout_height="wrap_content"
        android:hint="@string/RemovePowerToolBrandFilterHint"
        android:layout_width="fill_parent">
    </EditText>

    <EditText
        android:id="@+id/RemovePowerToolPowerToolNameEditText"
        android:layout_height="wrap_content"
        android:hint="@string/RemovePowerToolPowerToolNameFilterHint"
        android:layout_width="fill_parent"
        android:autofillHints="">
    </EditText>

    <EditText
        android:id="@+id/RemovePowerToolYearEditText"
        android:layout_height="wrap_content"
        android:hint="@string/RemovePowerToolYearFilterHint"
        android:layout_width="fill_parent"
        android:autofillHints="">
    </EditText>

    <ProgressBar
        android:id="@+id/RemovePowerToolProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/RemovePowerToolListView"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent">
    </ListView>
</LinearLayout>