<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".activity.common.ListOfPowerToolsActivity">

        <EditText
            android:id="@+id/ListOfPowerToolsBrandEditText"
            android:layout_height="wrap_content"
            android:hint="@string/ListOfPowerToolsBrandFilterHint"
            android:layout_width="fill_parent">
        </EditText>

        <EditText
            android:id="@+id/ListOfPowerToolsPowerToolNameEditText"
            android:layout_height="wrap_content"
            android:hint="@string/ListOfPowerToolsPowerToolNameFilterHint"
            android:layout_width="fill_parent">
        </EditText>

        <EditText
            android:id="@+id/ListOfPowerToolsYearEditText"
            android:layout_height="wrap_content"
            android:hint="@string/ListOfPowerToolsYearFilterHint"
            android:layout_width="fill_parent">
        </EditText>

        <ProgressBar
            android:id="@+id/ListOfPowerToolsProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ListView
            android:id="@+id/ListOfPowerToolsListView"
            android:layout_height="fill_parent"
            android:layout_width="fill_parent">
        </ListView>

    </LinearLayout>